# another-pacman

./: pyproject.toml
another_pacman/: another_pacman.py  game_object.py
