[tool.poetry]
name = "another-pacman"
version = "0.1.0"
description = ""
authors = ["Oleg Skakunov <dosmds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
